@@ -1,5 +1,6 @@
 package com.fairing.fairplay.event.service;
 
+import com.fairing.fairplay.common.exception.CustomException;
 import com.fairing.fairplay.event.dto.EventSnapshotDto;
 import com.fairing.fairplay.event.entity.Event;
 import com.fairing.fairplay.event.entity.EventDetail;
@@ -10,7 +11,10 @@ import com.fairing.fairplay.ticket.dto.TicketSnapshotDto;
 import com.fairing.fairplay.ticket.entity.EventTicket;
 import com.fairing.fairplay.ticket.entity.Ticket;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.hibernate.Hibernate;
+import org.springframework.dao.DataIntegrityViolationException;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -18,30 +22,37 @@ import java.time.LocalDateTime;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class EventVersionService {
 
     private final EventVersionRepository eventVersionRepository;
 
     @Transactional
     public EventVersion createEventVersion(Event event, Long updatedBy) {
-        int nextVersionNumber = eventVersionRepository.findTopByEventOrderByVersionNumberDesc(event)
-                .map(latestVersion -> latestVersion.getVersionNumber() + 1)
-                .orElse(1);
 
-        EventSnapshotDto snapshotDto = createSnapshotDto(event);
+        try { // 행사 버전 생성
+            int nextVersionNumber = eventVersionRepository.findTopByEventOrderByVersionNumberDesc(event)
+                    .map(latestVersion -> latestVersion.getVersionNumber() + 1)
+                    .orElse(1);
 
-        EventVersion eventVersion = new EventVersion();
-        eventVersion.setEvent(event);
-        eventVersion.setVersionNumber(nextVersionNumber);
-        eventVersion.setSnapshotFromDto(snapshotDto);
-        eventVersion.setUpdatedBy(updatedBy);
-        eventVersion.setUpdatedAt(LocalDateTime.now());
+            EventSnapshotDto snapshotDto = createSnapshotDto(event);
 
-        return eventVersionRepository.save(eventVersion);
+            EventVersion eventVersion = new EventVersion();
+            eventVersion.setEvent(event);
+            eventVersion.setVersionNumber(nextVersionNumber);
+            eventVersion.setSnapshotFromDto(snapshotDto);
+            eventVersion.setUpdatedBy(updatedBy);
+            eventVersion.setUpdatedAt(LocalDateTime.now());
+
+            return eventVersionRepository.save(eventVersion);
+        } catch (DataIntegrityViolationException e) {
+            log.error("중복 버전 번호로 인한 제약 조건 위반: " + e.getMessage());
+            throw new CustomException(HttpStatus.CONFLICT, "동시 요청으로 인해 버전 생성에 실패했습니다. 다시 시도해주세요.", e);
+        }
+
     }
 
     private EventSnapshotDto createSnapshotDto(Event event) {
@@ -64,10 +75,10 @@ public class EventVersionService {
         Hibernate.initialize(event.getEventTickets());
         List<Ticket> tickets = Optional.ofNullable(event.getEventTickets()).orElse(Collections.emptySet()).stream()
                 .map(EventTicket::getTicket)
-                .collect(Collectors.toList());
+                .toList();
         List<TicketSnapshotDto> ticketSnapshots = tickets.stream()
                 .map(this::createTicketSnapshotDto)
-                .collect(Collectors.toList());
+                .toList();
         builder.tickets(ticketSnapshots);
 
         // from EventDetail (존재하는 경우)
@@ -84,16 +95,18 @@ public class EventVersionService {
                     .thumbnailUrl(detail.getThumbnailUrl())
                     .startDate(detail.getStartDate())
                     .endDate(detail.getEndDate())
+                    .reentryAllowed(detail.getReentryAllowed())
+                    .checkOutAllowed(detail.getCheckOutAllowed())
                     .mainCategoryId(Optional.ofNullable(detail.getMainCategory()).map(mc -> mc.getGroupId()).orElse(null))
                     .subCategoryId(Optional.ofNullable(detail.getSubCategory()).map(sc -> sc.getCategoryId()).orElse(null))
                     .regionCodeId(Optional.ofNullable(detail.getRegionCode()).map(rc -> rc.getRegionCodeId()).orElse(null));
 
             // external links from EventDetail
             Hibernate.initialize(event.getExternalLinks());
-            List<ExternalLink> externalLinks = Optional.ofNullable(event.getExternalLinks()).orElse(Collections.emptySet()).stream().collect(Collectors.toList());
+            List<ExternalLink> externalLinks = Optional.ofNullable(event.getExternalLinks()).orElse(Collections.emptySet()).stream().toList();
             builder.externalLinks(externalLinks.stream()
                     .map(link -> new EventSnapshotDto.ExternalLinkSnapshot(link.getUrl(), link.getDisplayText()))
-                    .collect(Collectors.toList()));
+                    .toList());
         } else {
             builder.externalLinks(Collections.emptyList());
         }
